syntax = "proto3";
import "google/api/annotations.proto";

package camping;

service CampingService {
    rpc SitesGet(SitesGetRequest) returns (SitesGetResponse) {
            option (google.api.http) = {
              get: "/v1/camping/sites"
              additional_bindings {
                get: "/v1/camping/sites/{id}"
              }
            };
          }

    rpc SiteUpsert(SiteUpsertRequest) returns (SiteUpsertResponse) {
        option (google.api.http) = {
              put: "/v1/camping/sites"
              body: "*"
            };
    }

    rpc NationalForestsGet(NationalForestsGetRequest) returns (NationalForestsGetResponse) {
            option (google.api.http) = {
              get: "/v1/camping/forests"
              additional_bindings {
                get: "/v1/camping/forests/{id}"
              }
            };
          }

    rpc DistrictsGet(DistrictsGetRequest) returns (DistrictsGetResponse) {
            option (google.api.http) = {
              get: "/v1/camping/districts"
              additional_bindings {
                get: "/v1/camping/districts/{id}"
              }
            };
          }
//    rpc CreateNationalForest(CreateNationalForestRequest) returns (CreateNationalForestResponse) {
//            option (google.api.http) = {
//              put: "/v1/camping/forests"
//              body: "*"
//            };
//          }
}

message Site {
  uint64 id = 1;
  float latitude = 2;
  float longitude = 3;
  uint64 national_forest_id = 4;
  uint64 district_id = 5;
  uint64 altitude = 6;
  string notes = 7;
  string created_at = 8;
}

message NationalForest {
  uint64 id = 1;
  string name = 2;
  string website = 3;
  string created_at = 4;
}

message District {
  uint64 id = 1;
  uint64 national_forest_id = 2;
  string name = 3;
  string map_location = 4;
  string created_at = 5;
}

message SitesGetRequest {
    uint64 id = 1;
}

message SitesGetResponse {
  repeated Site sites = 1;
}

message SiteUpsertRequest {
    float latitude = 1;
    float longitude = 2;
    uint64 national_forest_id = 3;
    uint64 district_id = 4;
    uint64 altitude = 5;
    string notes = 6;
}

message SiteUpsertResponse {
    Site site = 1;
}

message NationalForestsGetRequest {
    uint64 id = 1;
}

message NationalForestsGetResponse {
  repeated NationalForest forests = 1;
}

message DistrictsGetRequest {
    uint64 id = 1;
}

message DistrictsGetResponse {
  repeated District districts = 1;
}

// CreateNationalForestRequest contains information necessary to create a new national forest
//message CreateNationalForestRequest {
//  NationalForest forest = 1;
//}
//
//message CreateNationalForestResponse { }
